processed/jira/txt/LU/LU-17161.txt
Key:        LU-17161
Summary:    fortify_memset_chk faling OBD_FREE_PTR()
Link:       https://jira.whamcloud.com/browse/LU-17161
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Sat, 30 Sep 2023 08:01:44 +0000
Updated:    Sun, 3 Mar 2024 10:17:45 +0000
Resolved:   Fri, 23 Feb 2024 14:35:31 +0000

--- Description ---
Build fails with:

In file included from /usr/src/linux-headers-6.1.0-10-common/include/linux/string.h:253,
                 from /usr/src/linux-headers-6.1.0-10-common/include/linux/bitmap.h:11,
                 from /usr/src/linux-headers-6.1.0-10-common/include/linux/cpumask.h:12,
                 from /usr/src/linux-headers-6.1.0-10-common/arch/x86/include/asm/cpumask.h:5,
                 from /usr/src/linux-headers-6.1.0-10-common/arch/x86/include/asm/msr.h:11,
                 from /usr/src/linux-headers-6.1.0-10-common/arch/x86/include/asm/processor.h:22,
                 from /usr/src/linux-headers-6.1.0-10-common/arch/x86/include/asm/cpufeature.h:5,
                 from /usr/src/linux-headers-6.1.0-10-common/arch/x86/include/asm/thread_info.h:53,
                 from /usr/src/linux-headers-6.1.0-10-common/include/linux/thread_info.h:60,
                 from /usr/src/linux-headers-6.1.0-10-common/arch/x86/include/asm/preempt.h:7,
                 from /usr/src/linux-headers-6.1.0-10-common/include/linux/preempt.h:78,
                 from /usr/src/linux-headers-6.1.0-10-common/include/linux/percpu.h:6,
                 from /usr/src/linux-headers-6.1.0-10-common/include/linux/prandom.h:12,
                 from /usr/src/linux-headers-6.1.0-10-common/include/linux/random.h:172,
                 from /home/shaun/lustre-release/lustre/obdclass/obd_mount.c:43:
In function ‘fortify_memset_chk’,
    inlined from ‘lustre_free_lsi’ at /home/shaun/lustre-release/lustre/obdclass/obd_mount.c:669:2,
    inlined from ‘lustre_put_lsi_free’ at /home/shaun/lustre-release/lustre/obdclass/obd_mount.c:687:2,
    inlined from ‘kref_put’ at /usr/src/linux-headers-6.1.0-10-common/include/linux/kref.h:65:3,
    inlined from ‘lustre_put_lsi’ at /home/shaun/lustre-release/lustre/obdclass/obd_mount.c:703:6:
/usr/src/linux-headers-6.1.0-10-common/include/linux/fortify-string.h:314:25: error: call to ‘__write_overflow_field’ declared with attribute warning: detected write beyond size of field (1st parameter); maybe use struct_group()? [-Werror=attribute-warning]
  314 |                         __write_overflow_field(p_size_field, size);
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  CC [M]  /home/shaun/lustre-release/lustre/ptlrpc/batch.o

--- Comment (pjones, Fri, 23 Feb 2024 14:35:31 +0000) ---
Landed for 2.16

--- Comment (gerrit, Fri, 23 Feb 2024 07:11:50 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/52559/

Subject: LU-17161 build: Avoid fortify_memset in OBD_FREE_PTR

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 58cc8cf98e37e9d8149d5f605a75d56f2cd4eb70

--- Comment (gerrit, Sat, 30 Sep 2023 08:12:43 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/52559

Subject: LU-17161 build: Avoid fortify_memset in OBD_FREE_PTR

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 34bda6e87791ea28bfc48b8bd703c70423f8df32
